--- a/ms_tech/Views/Clientes/Details.cshtml
+++ b/ms_tech/Views/Clientes/Details.cshtml
@@ -96,5 +96,5 @@
 </div>
 <p>
     @Html.IconButton("Volver", "Index", "Clientes", null, null, "")
-    @Html.IconButton("Editar", "Edit", "Clientes", new { id = Model.IdCliente }), null, "")
+    @Html.IconButton("Editar", "Edit", "Clientes", new { id = Model.IdCliente }, null, "")
 </p>
