--- a/ms_tech/Views/Clientes/Index.cshtml
+++ b/ms_tech/Views/Clientes/Index.cshtml
@@ -2,9 +2,6 @@
 @using PagedList.Mvc;
 @using ms_tech.Helpers;
 
-
-<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
-
 @{
     ViewBag.Title = "Lista de Clientes";
 }
@@ -19,7 +16,7 @@
 @using (Html.BeginForm("Index", "Clientes", FormMethod.Get))
 {
     <p>
-        @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control", @style = "display:inline-block", @placeholder = "Filtro" })
+        @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control", @style = "display:inline-block", @placeholder = "Filtro", @autocomplete = "off" })
         @Html.BotonBuscar()
     </p>
 }
@@ -55,24 +52,18 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ClientesTipos.Nombre)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
+
+            <td title="@(item.Nombre.Length>30 ? item.Nombre: "")">
+                @(item.Nombre.Length > 30 ? item.Nombre.Substring(0, 30) + "..." : item.Nombre)
+            </td>
+            <td title="@(item.Apellido.Length>30 ? item.Apellido: "")">
+                @(item.Apellido.Length > 30 ? item.Apellido.Substring(0, 30) + "..." : item.Apellido)
+            </td>
+            <td title="@(item.Mail.Length>30 ? item.Mail: "")">
+                @(item.Mail.Length > 30 ? item.Mail.Substring(0, 30) + "..." : item.Mail)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Apellido)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Mail)
-            </td>
-            <td>
-                @if (item.Activo)
-                {
-                    <text>Si</text>
-                }
-                else
-                {
-                    <text>No</text>
-                }
+                @(item.Activo ? "Si" : "No")
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Direccion)
@@ -90,7 +81,6 @@
     }
 
 </table>
-<br />
 
 @{
     if (Model.PageCount > 1)
