--- a/ms_tech/Views/Usuarios/Delete.cshtml
+++ b/ms_tech/Views/Usuarios/Delete.cshtml
@@ -78,7 +78,7 @@
 
         <div class="form-actions no-color">
             @Html.IconButton("Volver", "Index", "Usuarios", null, null, "")
-            @Html.IconButton("Eliminar", "delete", "Usuarios", new { id = Model.IdUsuario }, null, "")
+            @Html.BotonEliminar()
         </div>
     }
 </div>
