--- a/ms_tech/Views/Clientes/Delete.cshtml
+++ b/ms_tech/Views/Clientes/Delete.cshtml
@@ -75,8 +75,7 @@
 
         <div class="form-actions no-color">
             @Html.IconButton("Volver", "Index", "Clientes", null, null, "")
-            @Html.ActionLink("Eliminar", "Delete", new { id = Model.IdCliente }) |
-
+            @Html.BotonEliminar()
         </div>
     }
 </div>
