--- a/ms_tech/Views/Incidentes/EditarEstado.cshtml
+++ b/ms_tech/Views/Incidentes/EditarEstado.cshtml
@@ -83,7 +83,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Guardar" class="btn btn-default" />
+                @Html.BotonGuardar()
             </div>
         </div>
     </div>
