--- a/ms_tech/Views/Problemas/Delete.cshtml
+++ b/ms_tech/Views/Problemas/Delete.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ms_tech.Models.Problemas
+@using ms_tech.Helpers;
 
 @{
     ViewBag.Title = "Borrar";
@@ -59,8 +60,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Borrar" class="btn btn-default" /> |
-            @Html.ActionLink("Volver", "Index")
+            @Html.IconButton("Volver", "Index", "Problemas", null, null, "")
+            @Html.BotonEliminar()
         </div>
     }
 </div>
