--- a/ms_tech/Views/Problemas/Details.cshtml
+++ b/ms_tech/Views/Problemas/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ms_tech.Models.Problemas
+@using ms_tech.Helpers;
 
 @{
     ViewBag.Title = "Detalles";
@@ -39,6 +40,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.IdProblema }) |
-    @Html.ActionLink("Volver", "Index")
+    @Html.IconButton("Volver", "Index", "Problemas", null, null, "")
+    @Html.IconButton("Editar", "Edit", "Problemas", new { id = Model.IdProblema }, null, "")
 </p>
