--- a/ms_tech/Views/Productos/Details.cshtml
+++ b/ms_tech/Views/Productos/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ms_tech.Models.Productos
+@using ms_tech.Helpers;
 
 @{
     ViewBag.Title = "Detalles";
@@ -47,6 +48,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.IdProducto }) |
-    @Html.ActionLink("Volver", "Index")
+    @Html.IconButton("Volver", "Index", "Productos", null, null, "")
+    @Html.IconButton("Editar", "Edit", "Productos", new { id = Model.IdProducto }, null, "")
 </p>
