--- a/ms_tech/Views/Soluciones/Index.cshtml
+++ b/ms_tech/Views/Soluciones/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<ms_tech.ViewModels.SolucionesViewModel>
+﻿@model PagedList.IPagedList<ms_tech.ViewModels.SolucionesViewModel>
+@using PagedList.Mvc;
 @using ms_tech.Helpers;
 
 @{
@@ -8,45 +9,61 @@
 <h2>@ViewBag.Title</h2>
 
 <p>
-    @Html.ActionLink("Nueva Solución", "Create")
+    @Html.IconButton("Nueva Solución", "Create", "Soluciones", null, null, "")
 </p>
+
+@using (Html.BeginForm("Index", "Soluciones", FormMethod.Get))
+{
+    <p>
+        @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control", @style = "display:inline-block", @placeholder = "Filtro", @autocomplete = "off" })
+        @Html.BotonBuscar()
+    </p>
+}
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Productos.Nombre)
+            @Html.ActionLink("Producto", "Index", new { sortOrder = ViewBag.ProductoSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Problemas.Nombre)
+            @Html.ActionLink("Problema", "Index", new { sortOrder = ViewBag.ProblemaSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Descripcion)
+            @Html.ActionLink("Descripcion", "Index", new { sortOrder = ViewBag.NombreSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Activo)
+            @Html.ActionLink("Activo", "Index", new { sortOrder = ViewBag.ActivoSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Productos.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Problemas.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Descripcion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Activo)
-        </td>
-        <td>
-            @Html.ImageActionLink("Editar", "Edit", "Soluciones", new { id = item.IdSolucion }, null) |
-            @Html.ImageActionLink("Detalles", "Details", "Soluciones", new { id = item.IdSolucion }, null) |
-            @Html.ImageActionLink("Eliminar", "Delete", "Soluciones", new { id = item.IdSolucion }, null)
-        </td>
-    </tr>
-}
-
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Productos.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Problemas.Nombre)
+            </td>
+            <td title="@(item.Descripcion.Length>100 ? item.Descripcion: "")">
+                @(item.Descripcion.Length > 100 ? item.Descripcion.Substring(0, 100) + "..." : item.Descripcion)
+            </td>
+            <td>
+                @(item.Activo ? "Si" : "No")
+            </td>
+            <td>
+                @Html.ImageActionLink("Editar", "Edit", "Soluciones", new { id = item.IdSolucion }, null) |
+                @Html.ImageActionLink("Detalles", "Details", "Soluciones", new { id = item.IdSolucion }, null) |
+                @Html.ImageActionLink("Eliminar", "Delete", "Soluciones", new { id = item.IdSolucion }, null)
+            </td>
+        </tr>
+    }
 </table>
+@{
+    if (Model.PageCount > 1)
+    {
+        <text>Página</text> @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) <text>de</text> @Model.PageCount
+
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+    }
+}
