--- a/ms_tech/Views/Incidentes/Index.cshtml
+++ b/ms_tech/Views/Incidentes/Index.cshtml
@@ -9,15 +9,15 @@
 <h2>@ViewBag.Title</h2>
 
 <p>
-    @Html.IconButton("Nuevo Incidente", "Create", "Incidentes", null, null, "")
-</p>
-@using (Html.BeginForm("Index", "Incidentes", FormMethod.Get))
-{
-    <p>
+    @using (Html.BeginForm("Index", "Incidentes", FormMethod.Get))
+    {
+        @Html.IconButton("Nuevo Incidente", "Create", "Incidentes", null, null, "")
+        <text> </text>
         @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control", @style = "display:inline-block", @placeholder = "Filtro", @autocomplete = "off" })
+        <text> </text>
         @Html.BotonBuscar()
-    </p>
-}
+    }
+</p>
 <table class="table">
     <tr>
         <th>
