--- a/ms_tech/Views/Soluciones/Edit.cshtml
+++ b/ms_tech/Views/Soluciones/Edit.cshtml
@@ -36,7 +36,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Descripcion, 5, 55, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
             </div>
         </div>
