--- a/ms_tech/Views/Usuarios/Delete.cshtml
+++ b/ms_tech/Views/Usuarios/Delete.cshtml
@@ -2,7 +2,7 @@
 @using ms_tech.Helpers;
 
 @{
-    ViewBag.Title = "Borrar";
+    ViewBag.Title = "Eliminar";
 }
 
 <h2>
@@ -11,7 +11,7 @@
     @Html.DisplayFor(model => model.Apellido)
 </h2>
 
-<h3>Esta seguro que desea borrar este usuario?</h3>
+<h3>Esta seguro que desea eliminar este usuario?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
