--- a/ms_tech/Views/Clientes/Delete.cshtml
+++ b/ms_tech/Views/Clientes/Delete.cshtml
@@ -2,14 +2,17 @@
 @using ms_tech.Helpers;
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar";
 }
 
-<h2>Delete</h2>
+<h2>
+    Cliente:&nbsp;
+    @Html.DisplayFor(model => model.Nombre)
+    @Html.DisplayFor(model => model.Apellido)
+</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Esta seguro que desea eliminar este cliente?</h3>
 <div>
-    <h4>Clientes</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
